--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:~/bldrgst
+    url: jdbc:h2:tcp://localhost/~/bldrgst
     username: admin
     password:
     driver-class-name: org.h2.Driver
